Fixing alignment issue on the developer documentation page.

--- a/docs/index/css/index.css
+++ b/docs/index/css/index.css
@@ -2,6 +2,11 @@ body {
   background-color: #eff9ed;
   padding-top: 85px;
 }
+
+.main-content {
+  padding-top: 15px;
+}
+
 .card-img-top {
     padding: 120px
 }
